[gd_scene load_steps=14 format=3 uid="uid://dutuwg10y2hwq"]

[ext_resource type="Script" path="res://Scenes and Scripts/UI/Menus/credits.gd" id="2_nu17t"]
[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="2_rnov3"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="3_da0v7"]
[ext_resource type="Texture2D" uid="uid://d38a3uriu26gx" path="res://Textures/Buttons/icons/donate.png" id="4_6crf1"]
[ext_resource type="Texture2D" uid="uid://bs7yco7s5pg15" path="res://icon.png" id="4_84af4"]
[ext_resource type="Texture2D" uid="uid://bwwdur67r0bgl" path="res://Textures/aseprite.png" id="5_e238y"]
[ext_resource type="FontFile" uid="uid://cq27s0444iwkg" path="res://Textures/Fonts/ConnectionIi-2wj8.otf" id="9_t01cb"]
[ext_resource type="StyleBox" uid="uid://bubm5sx3xn6q5" path="res://Resources/Themes/TitleLabel.tres" id="10_4hdph"]
[ext_resource type="Texture2D" uid="uid://ci1qrp3pyqm6h" path="res://Textures/Buttons/icons/close.png" id="11_6hv25"]
[ext_resource type="Texture2D" uid="uid://cgfs1pdopjbh" path="res://Textures/Buttons/icons/close_hover.png" id="12_schb0"]
[ext_resource type="PackedScene" uid="uid://dorw3vr2amuy3" path="res://Scenes and Scripts/Components/button_sound_component.tscn" id="13_1042u"]

[sub_resource type="FontVariation" id="FontVariation_80dg7"]
base_font = ExtResource("9_t01cb")
spacing_bottom = -2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_40hs1"]
resource_local_to_scene = true
shader = ExtResource("3_da0v7")

[node name="Credits" type="Control" node_paths=PackedStringArray("GrabAreas")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_nu17t")
GrabAreas = [NodePath("VBoxContainer/PanelContainer"), NodePath("VBoxContainer/TitleContainer")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
offset_left = -67.0
offset_top = -51.0
offset_right = 71.0
offset_bottom = 11.0
theme_override_constants/separation = -146

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
use_parent_material = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_80dg7")
text = "- Made by
Adam Owen and Jo Gaunt
- Funded by The Royal Society
- Made with open-source
software:"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 11
theme_override_constants/v_separation = 2
columns = 2

[node name="GodotIcon" type="TextureButton" parent="VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(2.08165e-12, 26)
layout_mode = 2
texture_normal = ExtResource("4_84af4")
ignore_texture_size = true
stretch_mode = 5

[node name="AsepriteIcon" type="TextureButton" parent="VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("5_e238y")
ignore_texture_size = true
stretch_mode = 5

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Godot"
horizontal_alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/VBoxContainer/GridContainer"]
use_parent_material = true
layout_mode = 2
theme_override_font_sizes/font_size = 9
text = "Aseprite"
horizontal_alignment = 1

[node name="Donate" parent="VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("2_rnov3")]
material = SubResource("ShaderMaterial_40hs1")
layout_mode = 2
icon = ExtResource("4_6crf1")
text = "Donate on KoFi "
minimum_size = Vector2(100, 23)
expand_icon = true

[node name="TitleContainer" type="PanelContainer" parent="VBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = ExtResource("10_4hdph")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0
alignment = 1

[node name="Close" type="TextureButton" parent="VBoxContainer/TitleContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(10, 14)
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("11_6hv25")
texture_hover = ExtResource("12_schb0")
stretch_mode = 5

[node name="ButtonSoundComponent" parent="VBoxContainer/TitleContainer/HBoxContainer/Close" instance=ExtResource("13_1042u")]
on_pressed = true

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer/HBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(50, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 1
theme_override_font_sizes/font_size = 9
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/GridContainer/GodotIcon" to="." method="_on_godot_icon_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/GridContainer/AsepriteIcon" to="." method="_on_aseprite_icon_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Donate" to="." method="_on_donate_pressed"]
[connection signal="pressed" from="VBoxContainer/TitleContainer/HBoxContainer/Close" to="." method="_on_close_pressed"]
